--- a/includes/__variables.adoc
+++ b/includes/__variables.adoc
@@ -153,3 +153,13 @@
 :strftime-doc: image:images/strftime-doc.png[Timestamp documentation icon.]
 :spec-char-default: image:images/spec-char-default.png[Reset special characters to default button.]
 :smart-quotes: image:images/smart-quotes.png[Smart quotes example.]
+:classic-theme: image:images/classic-theme.png[Classic theme example.]
+:cobalt-theme: image:images/cobalt-theme.png[Cobalt theme example.]
+:kate-theme: image:images/kate-theme.png[Kate theme example.]
+:oblivion-theme: image:images/oblivion-theme.png[Oblivion theme example.]
+:tango-theme: image:images/tango-theme.png[Tango theme example.]
+:add-command: image:images/add-command.png[Add command button.]
+:select-language-menu: image:images/select-language-menu.png[Select language menu.]
+:edit-command: image:images/edit-command.png[Edit command demonstration.]
+:reset-commands: image:images/reset-commands.png[Reset commands button.]
+:terminal-execution: image:images/terminal-execution.png[Code execution menu.]
