--- a/includes/_09_settings.adoc
+++ b/includes/_09_settings.adoc
@@ -100,7 +100,7 @@ The table below, copied from the {strftime}[*strftime* documentation], can be re
 [[rich-text-pref]]
 === Rich Text
 
-This menu provides configuration options for link:#_rich_text[Rich Text nodes].
+The *Rich Text* preferences menu provides configuration options for link:#_rich_text[Rich Text nodes].
 
 [[figure-9.06]]
 .Figure 9.06
@@ -155,7 +155,7 @@ NOTE: *Enchant* is required for this feature. Please install the this dependency
 
 === Plain Text and Code
 
-This menu provides configuration options for link:#_automatic_syntax_highlighting[automatic syntax highlight] nodes, link:#_plain_text[plain text] nodes, and link:#codebox[codeboxes].
+The *Plain Text and Code* preferences menu provides configuration options for link:#_automatic_syntax_highlighting[automatic syntax highlight] nodes, link:#_plain_text[plain text] nodes, and link:#codebox[codeboxes].
 
 [[figure-9.07]]
 .Figure 9.07
@@ -256,121 +256,194 @@ NOTE: The language-specific command represented by `<command>` is determined by 
 
 === Tree 1
 
-[[figure-9.08]]
-.Figure 9.08
+The *Tree 1* preferences menu provides configuration options for the link:#tree-view[tree view] panel.
+
+[[figure-9.18]]
+.Figure 9.18
 {tree1-pref}
 
 ==== Theme
 
-* *Light Background, Dark Text* -
+* *Light Background, Dark Text* - Sets the tree view background color to white and text color to black.
 
-* *Dark Background, Light Text* -
+* *Dark Background, Light Text* - Sets the tree view background color to dark blue and text color to white.
 
-* *Custom Background and Text* -
+* *Custom Background and Text* - Defines custom colors for the editor's background and text.
+
 
 ==== Default Text Nodes Icons
 
-* *Use Different Cherries per Level* -
+* *Use Different Cherries per Level* - Assigns a unique, default icon to each group of nodes sharing the same level of hierarchy within a node structure.
 
-* *Use Selected Icon* -
+* *Use Selected Icon* - Assigns one icon to be the default icon for all nodes.
 
-* *No Icon* -
+* *No Icon* - Prevents Cherrytree from assigning icons to nodes by default.
 
-* *Hide Right Side Auxiliary Icon* -
+* *Hide Right Side Auxiliary Icon* - Hides icons regarding a node's status, such as the *Read Only* and *Bookmarked* icons.
+
+NOTE: Default icons can be overwritten within the *Use Selected Icon* option of a node's link:#_creating_nodes[property menu].
 
 ==== Node Status at Startup
 
-* *Restore Expanded/Collapsed Status* -
+* *Restore Expanded/Collapsed Status* - Nodes of a document retain their expand/collapse state after the document is closed and opened again.
 
-* *Expand all Nodes* -
+* *Expand all Nodes* - All nodes expand when Cherrytree starts.
 
-* *Collapse all Nodes* -
+* *Collapse all Nodes* - All nodes collapse when Cherrytree starts.
 
-* *Nodes in Bookmarks Always Visible* -
+* *Nodes in Bookmarks Always Visible* - {node-relations}[Parents] of bookmarked nodes expand on startup so that all bookmarked nodes are visible within the link:#tree-view[tree view].
 
 === Tree 2
 
-[[figure-9.09]]
-.Figure 9.09
+The *Tree 2* preferences menu is a continuation of link:#_tree_1[*Tree 1*], providing additional configuration options for the link:#tree-view[tree view] panel.
+
+[[figure-9.19]]
+.Figure 9.19
 {tree2-pref}
 
 ==== Miscellaneous
 
-* *Tree Nodes Names Wrapping Width* -
+* *Tree Nodes Names Wrapping Width* - Defines the width in Pixels at which text begins to wrap within the link:#tree-view[tree view].
 
-* *Display Tree on Right Side* -
+* *Display Tree on Right Side* - Moves the link:#tree-view[tree view] panel to the right side of the window.
 
-* *Move Focus to Text at Mouse Click* -
+* *Move Focus to Text at Mouse Click* - When a node is selected, the editor becomes the active panel, and the cursor is positioned at the beginning of the first line.
 
-* *Expand Node at Mouse Click* -
+* *Expand Node at Mouse Click* - Collapsed nodes expand when they are selected within the link:#tree-view[tree view].
 
-* *Last Visited Nodes on Node Name Header* -
+* *Last Visited Nodes on Node Name Header* - Defines the number of most recently visited nodes to display above the editor. <<figure-9.20>>
++
+[[figure-9.20]]
+.Figure 9.20
+{recent-nodes}
 
 === Fonts
 
-[[figure-9.10]]
-.Figure 9.10
+[[figure-9.21]]
+.Figure 9.21
 {fonts-pref}
 
-* *Rich Text* -
+* *Rich Text* - Defines the default font family, style, and size applied to Rich Text.
 
-* *Plain Text* -
+* *Plain Text* - Defines the default font family, style, and size applied to Plain Text.
 
-* *Code Font* -
+* *Code Font* - Defines the default font family, style, and size applied to syntax-highlighted text.
 
-* *Sans Normal* -
+* *Tree Font* - Defines the default font family, style, and size applied to text within the link:#tree-view[tree view].
 
 === Links
 
-[[figure-9.11]]
-.Figure 9.11
+[[figure-9.22]]
+.Figure 9.22
 {links-pref}
 
 ==== Custom Actions
 
-* *Enable Custom Web Link Click Action* -
+* *Enable Custom Web Link Click Action* - Defines a custom command to run when a web link is clicked within Cherrytree.
 
-* *Enable Custom File Link Clicked Action* -
+* *Enable Custom File Link Clicked Action* -  Defines a custom command to run when a file link is clicked within Cherrytree.
 
-* *Enable Custom Folder Link Clicked Action* -
+* *Enable Custom Folder Link Clicked Action* -  Defines a custom command to run when a folder link is clicked within Cherrytree.
 
 ==== Colors
 
-* *To Website* -
+* *To Website* - Defines the default text color of links to websites.
 
-* *To File* -
+* *To File* - Defines the default text color of links to files.
 
-* *To Node* -
+* *To Node* - Defines the default text color of links to nodes.
 
-* *To Folder* -
+* *To Folder* - Defines the default text color of links to folders.
 
 ==== Miscellaneous
 
-* *Underline Links* -
+* *Underline Links* - Apply the pass:[<u>underline</u>] property to all links by default.
 
-* *Use Relative Paths for Files And Folders* -
+* *Use Relative Paths for Files And Folders* - When defining paths for links, use link addresses that are relative to the directory containing the current working document.
++
+NOTE: {relative-paths}[Click here] for more information about relative paths.
 
-* *Anchor Size* -
+* *Anchor Size* - Defines the size of the of link:#_anchors[anchor] icons.
 
 === Toolbar
 
-[[figure-9.12]]
-.Figure 9.12
+The *Toolbar* preferences menu provides configuration options for the link:#toolbar[toolbar] panel.
+
+[[figure-9.23]]
+.Figure 9.23
 {toolbar-pref}
 
-==== Adding a new Icon to Toolbar
+==== Adding Actions to the Toolbar
 
-==== Reset to Default Settings
+[start=1]
+. Click the `+` icon, shown in <<figure-9.24>> to display the *Select Element to Add* window, <<figure-9.25>>.
++
+[[figure-9.24]]
+.Figure 9.24
+{add-action}
+
+. Select an action to add.
++
+[[figure-9.25]]
+.Figure 9.25
+{select-element-menu}
++
+NOTE: The `---------` option represents a vertical divider in the toolbar.
+. Click *OK* to complete the addition.
+
+The action can then be dragged up or down to determine its position on the toolbar. Actions are organized from top to bottom in the *Toolbar* preferences menu, which translates to left to right in the actual link:#toolbar[toolbar].
+
+==== Removing Actions from the Toolbar
+
+[start=1]
+. Select an action.
+. Click the `-` icon, shown in <<figure-9.26>> to remove the selected action from the link:#toolbar[toolbar].
++
+[[figure-9.26]]
+.Figure 9.26
+{remove-action}
+
+==== Reset Toolbar Settings
+
+Click the yellow return button, show in <<figure-9.27>> to return to Cherrytree's default toolbar settings.
+
+[[figure-9.27]]
+.Figure 9.27
+{default-toolbar}
 
 === Keyboard Shortcuts
 
-[[figure-9.13]]
-.Figure 9.13
+The *keyboard Shortcuts* preferences menu provides configuration options for shortcuts to Cherrytree's features.
+
+[[figure-9.28]]
+.Figure 9.28
 {keyboard-pref}
 
 ==== Editing a Keyboard Shortcut
 
-==== Reset to Default Settings
+[start=1]
+. Select a shortcut to edit.
+. Click the edit shortcut button, shown in <<figure-9.29>> to display the *Edit Keyboard Shortcut* menu, <<figure-9.30>>.
++
+[[figure-9.29]]
+.Figure 9.29
+{edit-shortcut-button}
+
+. Select *No Keyboard Shortcut* to remove a shortcut or toggle any of the three options, *control*, *shift*, and *alt*, and add one or more keys to the adjacent form.
++
+[[figure-9.30]]
+.Figure 9.30
+{edit-shortcut-menu}
+
+. Click *OK* to complete the edit.
+
+==== Reset Keyboard Shortcuts Settings
+
+Click the yellow return button, show in <<figure-9.31>> to return to Cherrytree's default shortcut settings.
+
+[[figure-9.31]]
+.Figure 9.31
+{reset-shortcuts}
 
 ==== Default Keyboard Shortcuts
 
@@ -506,8 +579,8 @@ NOTE: The language-specific command represented by `<command>` is determined by 
 
 === Miscellaneous
 
-[[figure-9.14]]
-.Figure 9.14
+[[figure-9.32]]
+.Figure 9.32
 {misc-pref}
 
 ==== System Tray
