--- a/includes/_09_settings.adoc
+++ b/includes/_09_settings.adoc
@@ -585,22 +585,63 @@ Click the yellow return button, show in <<figure-9.31>> to return to Cherrytree'
 
 ==== System Tray
 
-* *Enable System Tray Docking* -
+* *Enable System Tray Docking* - Closing Cherrytree minimizes the application to a background process which can be quickly accessed from the machine's system tray. *AppIndicator* may be required to access Cherrytree from the system tray in Linux. 
 
-* *Start Minimized in the System Tray* -
+* *Start Minimized in the System Tray* - Minimizes Cherrytree to the system tray on startup.
 
-* *Use AppIndicator for Docking* -
+* *Use AppIndicator for Docking* - (Linux only) Uses the appindicator feature to provide quick access to Cherrytree from your system tray.
 
 ==== Saving
 
-* *Autosave Every `x` Minutes* -
+* *Autosave Every `x` Minutes* - When enabled, saves the working document every `x` minutes, where `x` is the number defined in this setting.
 
-* *Enable Word Count in Statusbar* -
+* *Autosave on Quit* - Saves the document upon closing Cherrytree.
 
-* *Reload Document From Last Session* -
+* *Create a Backup Copy Before Saving* - Stores a copy of the previous version before saving the new version. Backups are stored in the same directory as the current document. 
++
+To open a backup:
++
+[start=1]
+. Rename the backup file, deleting the `~` characters appended to its extension.
+. Open the backup file within Cherrytree.
 
-* **Reload After External Update to CT* File** -
+* *Number of Backups to Keep* - Defines the number of backups to keep. The oldest backup will be removed when this limit is exceeded.
+
+CAUTION: This also applies to autosaves that run on a time interval. For example, if your application is configured to save every 5 minutes, Cherrytree creates a backup every five minutes. When the backup limited is exceeded, a backup is cycled out every 5 minutes.
+
+==== Miscellaneous
+
+* *Automatically Check for Newer Version* - Checks the Cherrytree website on startup to determine if a new version of the application is available for download.
+
+* *Enable Word Count in Statusbar* - Displays the word count of the selected node at the bottom of the main window.
+
+* *Reload Document From Last Session* - Cherrytree opens to the same document that was last opened in the previous session.
+
+* **Reload After External Update to CT* File** - Cherrytree refreshes its instance of a document to reflect changes made to the document from other instances.
+
+WARNING: Cherrytree is not intended to be used as a collaboration tool. *Only one instance of a document should be edited at a time.* Editing two or more instances of a document at the same time yields a high potential for *errors* and *data loss*.
 
 ==== Language
 
-default
+Defines the language of Cherrytree's interface. Select from one of the following languages:
+
+* *default* -
+* *cs* - Czech
+* *de* - German
+* *el* - Modern Greek
+* *en* - English
+* *es* - Spanish
+* *fi* - Finnish
+* *fr* - French
+* *hy* - Armenian
+* *it* - Italian
+* *ja* - Japanese
+* *lt* - Lithuanian
+* *nl* - Dutch
+* *pl* - Polish
+* *pt_BR* - Portuguese (Brazil)
+* *ru* - Russian 
+* *sl* - Slovenian
+* *tr* - Turkish
+* *uk* - Ukrainian 
+* *zh_CN* - Chinese
